--- a/generators/app/templates/src/man/_.1.md
+++ b/generators/app/templates/src/man/_.1.md
@@ -1,18 +1,21 @@
-% <%= package %>(1) volbrid user manual
-% <%= binary %>
+% <%= appname %>(1) <%= appname %> user manual
+% <%= appname %>
 % January 1, 3000
 
 # NAME
 
-<%= binary %> - <%= desc %>
+<%= appname %> - <%= description %>
 
 # SYNOPSIS
 
-<%= binary %>
+<%= appname %>
 
 # DESCRIPTION
 
 # OPTIONS
+
+-h, \--help
+: Show help
 
 # EXAMPLES
 
